@@ -2932,6 +2932,38 @@ operator|.
 name|getReaderPooling
 argument_list|()
 expr_stmt|;
+name|writeLock
+operator|=
+name|directory
+operator|.
+name|makeLock
+argument_list|(
+name|WRITE_LOCK_NAME
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+operator|!
+name|writeLock
+operator|.
+name|obtain
+argument_list|(
+name|conf
+operator|.
+name|getWriteLockTimeout
+argument_list|()
+argument_list|)
+condition|)
+comment|// obtain write lock
+throw|throw
+operator|new
+name|LockObtainFailedException
+argument_list|(
+literal|"Index locked for write: "
+operator|+
+name|writeLock
+argument_list|)
+throw|;
 name|OpenMode
 name|mode
 init|=
@@ -2986,38 +3018,6 @@ name|directory
 argument_list|)
 expr_stmt|;
 block|}
-name|writeLock
-operator|=
-name|directory
-operator|.
-name|makeLock
-argument_list|(
-name|WRITE_LOCK_NAME
-argument_list|)
-expr_stmt|;
-if|if
-condition|(
-operator|!
-name|writeLock
-operator|.
-name|obtain
-argument_list|(
-name|conf
-operator|.
-name|getWriteLockTimeout
-argument_list|()
-argument_list|)
-condition|)
-comment|// obtain write lock
-throw|throw
-operator|new
-name|LockObtainFailedException
-argument_list|(
-literal|"Index locked for write: "
-operator|+
-name|writeLock
-argument_list|)
-throw|;
 name|boolean
 name|success
 init|=
