@@ -25,6 +25,17 @@ import|;
 end_import
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|CountDownLatch
+import|;
+end_import
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -2141,6 +2152,357 @@ literal|true
 argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
+comment|//  LUCENE-3365: Test adding two documents with the same field from two different IndexWriters
+comment|//  that we attempt to open at the same time.  As long as the first IndexWriter completes
+comment|//  and closes before the second IndexWriter time's out trying to get the Lock,
+comment|//  we should see both documents
+DECL|method|testOpenTwoIndexWritersOnDifferentThreads
+specifier|public
+name|void
+name|testOpenTwoIndexWritersOnDifferentThreads
+parameter_list|()
+throws|throws
+name|IOException
+throws|,
+name|InterruptedException
+block|{
+specifier|final
+name|MockDirectoryWrapper
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|CountDownLatch
+name|oneIWConstructed
+init|=
+operator|new
+name|CountDownLatch
+argument_list|(
+literal|1
+argument_list|)
+decl_stmt|;
+name|DelayedIndexAndCloseRunnable
+name|thread1
+init|=
+operator|new
+name|DelayedIndexAndCloseRunnable
+argument_list|(
+name|dir
+argument_list|,
+name|oneIWConstructed
+argument_list|)
+decl_stmt|;
+name|DelayedIndexAndCloseRunnable
+name|thread2
+init|=
+operator|new
+name|DelayedIndexAndCloseRunnable
+argument_list|(
+name|dir
+argument_list|,
+name|oneIWConstructed
+argument_list|)
+decl_stmt|;
+name|thread1
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+name|thread2
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+name|oneIWConstructed
+operator|.
+name|await
+argument_list|()
+expr_stmt|;
+name|thread1
+operator|.
+name|startIndexing
+argument_list|()
+expr_stmt|;
+name|thread2
+operator|.
+name|startIndexing
+argument_list|()
+expr_stmt|;
+name|thread1
+operator|.
+name|join
+argument_list|()
+expr_stmt|;
+name|thread2
+operator|.
+name|join
+argument_list|()
+expr_stmt|;
+name|assertFalse
+argument_list|(
+literal|"Failed due to: "
+operator|+
+name|thread1
+operator|.
+name|failure
+argument_list|,
+name|thread1
+operator|.
+name|failed
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+literal|"Failed due to: "
+operator|+
+name|thread2
+operator|.
+name|failure
+argument_list|,
+name|thread2
+operator|.
+name|failed
+argument_list|)
+expr_stmt|;
+comment|// now verify that we have two documents in the index
+name|IndexReader
+name|reader
+init|=
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|dir
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"IndexReader should have one document per thread running"
+argument_list|,
+literal|2
+argument_list|,
+name|reader
+operator|.
+name|numDocs
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|reader
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+DECL|class|DelayedIndexAndCloseRunnable
+specifier|static
+class|class
+name|DelayedIndexAndCloseRunnable
+extends|extends
+name|Thread
+block|{
+DECL|field|dir
+specifier|private
+specifier|final
+name|Directory
+name|dir
+decl_stmt|;
+DECL|field|failed
+name|boolean
+name|failed
+init|=
+literal|false
+decl_stmt|;
+DECL|field|failure
+name|Throwable
+name|failure
+init|=
+literal|null
+decl_stmt|;
+DECL|field|startIndexing
+specifier|private
+specifier|final
+name|CountDownLatch
+name|startIndexing
+init|=
+operator|new
+name|CountDownLatch
+argument_list|(
+literal|1
+argument_list|)
+decl_stmt|;
+DECL|field|iwConstructed
+specifier|private
+name|CountDownLatch
+name|iwConstructed
+decl_stmt|;
+DECL|method|DelayedIndexAndCloseRunnable
+specifier|public
+name|DelayedIndexAndCloseRunnable
+parameter_list|(
+name|Directory
+name|dir
+parameter_list|,
+name|CountDownLatch
+name|iwConstructed
+parameter_list|)
+block|{
+name|this
+operator|.
+name|dir
+operator|=
+name|dir
+expr_stmt|;
+name|this
+operator|.
+name|iwConstructed
+operator|=
+name|iwConstructed
+expr_stmt|;
+block|}
+DECL|method|startIndexing
+specifier|public
+name|void
+name|startIndexing
+parameter_list|()
+block|{
+name|this
+operator|.
+name|startIndexing
+operator|.
+name|countDown
+argument_list|()
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|run
+specifier|public
+name|void
+name|run
+parameter_list|()
+block|{
+try|try
+block|{
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|Field
+name|field
+init|=
+name|newField
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"testData"
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|YES
+argument_list|,
+name|Field
+operator|.
+name|Index
+operator|.
+name|ANALYZED
+argument_list|,
+name|Field
+operator|.
+name|TermVector
+operator|.
+name|WITH_POSITIONS_OFFSETS
+argument_list|)
+decl_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+name|field
+argument_list|)
+expr_stmt|;
+name|IndexWriter
+name|writer
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+name|newIndexWriterConfig
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|MockAnalyzer
+argument_list|(
+name|random
+argument_list|)
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|iwConstructed
+operator|.
+name|countDown
+argument_list|()
+expr_stmt|;
+name|startIndexing
+operator|.
+name|await
+argument_list|()
+expr_stmt|;
+name|writer
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Throwable
+name|e
+parameter_list|)
+block|{
+name|failed
+operator|=
+literal|true
+expr_stmt|;
+name|failure
+operator|=
+name|e
+expr_stmt|;
+name|failure
+operator|.
+name|printStackTrace
+argument_list|(
+name|System
+operator|.
+name|out
+argument_list|)
+expr_stmt|;
+return|return;
+block|}
+block|}
 block|}
 block|}
 end_class
